--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,18 @@
 <resources>
     <string name="app_name">Notepad</string>
-    <string name="hint_title">Type title ...</string>
-    <string name="hint_body">Type body ...</string>
+    <string name="hint_nombre">Escribe un nombre ...</string>
+    <string name="hint_maxOcupantes">Maximos ocupantes ...</string>
+    <string name="hint_precioXpersona">Precio por persona ...</string>
+    <string name="hint_descripcion">Escribe una descripcion ...</string>
     <string name="button_save">Save</string>
-    <string name="empty_not_saved">Note not saved because title is empty.</string>
-    <string name="add_note">Add note</string>
-    <string name="menu_delete">Delete Note</string>
-    <string name="menu_edit">Edit Note</string>
-    <string name="title">Title</string>
-    <string name="body">Body</string>
+    <string name="empty_not_saved">Parcela no guardada porque no hay nombre.</string>
+    <string name="add_note">Añadir Parcela</string>
+    <string name="menu_delete">Borrar Parcela</string>
+    <string name="menu_edit">Editar Parcela</string>
+    <string name="cambiar_a_reservas">Listado Reservas</string>
+    <string name="cambiar_a_parcelas">Listado Parcelas</string>
+    <string name="nombre">Nombre</string>
+    <string name="maxOcupantes">MaxOcupantes</string>
+    <string name="precioXpersona">PrecioXpersona</string>
+    <string name="descripcion">Descripcion</string>
 </resources>
