aplicacion operativa sin funcionalidades avanzadas a 19/11 por la mañana desde el ultimo commit se ha añadido comprobaciones en reservas y buena gestion de fechas falta: arreglar cuando se le da al boton añadir parcela en añadir/modificar reserva

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,9 +70,18 @@
     <string name="editar">Editar</string>
     <string name="eliminar">Eliminar</string>
     <string name="seleccionara_parcela">Seleccionar parcela</string>
+
+    <string name="parcela_nombre">Nombre de parcela</string>
     <string name="numero_ocupantes">Numero de ocupantes</string>
+    <string name="edit_button">Editar</string>
+    <string name="delete_button">Eliminar</string>
+
+    <string name="delete_all">Eliminar todas las reservas</string>
+    <string name="all_reservas_deleted">Todas las reservas han sido eliminadas</string>
 
     <string name="no_parcelas_reservadas">No hay parcelas reservadas</string>
+    <string name="no_parcelas_disponibles">No hay parcelas disponibles</string>
 
+    <string name="cancel">Cancelar</string>
 
 </resources>
