--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="hint_fechaSalida">Fecha de salida ...</string>
     <string name="hint_precioTotal">Precio total</string>
 
+    <string name="hint_numero_ocupantes">Introduce el numero de ocupantes ...</string>
+
     <string name="button_save">Save</string>
 
     <string name="duplicate_name_error">Parcela no guardada porque existe otra con el mismo nombre.</string>
@@ -77,6 +79,8 @@
     <string name="edit_button">Editar</string>
     <string name="delete_button">Eliminar</string>
 
+    <string name="edit_ocupantes">Editar el numero de ocupantes</string>
+
     <string name="delete_all">Eliminar todas las reservas</string>
     <string name="all_reservas_deleted">Todas las reservas han sido eliminadas</string>
 
@@ -84,5 +88,6 @@
     <string name="no_parcelas_disponibles">No hay parcelas disponibles</string>
 
     <string name="cancel">Cancelar</string>
+    <string name="save_reserva_first">Por favor, guarda la reserva antes de añadir parcelas.</string>
 
 </resources>
