aplicacion operativa, funciona todo menos enviar informacion aunque no tiene sentido que no vaya a 30/11 mañana

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,8 +63,8 @@
 
     <string name="nombreCliente">Nombre</string>
     <string name="telefono">Telefono</string>
-    <string name="FechaEntrada">Fecha de entrada</string>
-    <string name="FechaSalida">Fecha de salida</string>
+    <string name="FechaEntrada">Fecha entrada</string>
+    <string name="FechaSalida">Fecha salida</string>
     <string name="precioTotal">Precio total</string>
 
     <string name="parcela">Parcela</string>
