--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,6 +93,9 @@
     <string name="invalid_data">Dato invalido.</string>
 
     <string name="no_available_parcelas">No hay parcelas disponibles para las fechas seleccionadas.</string>
+    <string name="invalid_date_current">La fecha de entrada y salida debe ser igual o posterior a la fecha actual.</string>
+    <string name="invalid_date_incorrect">El día o el mes son inválidos.</string>
+    <string name="empty_not_saved_descripcion">Parcela no guardada porque no hay descripcion.</string>
 
 
 </resources>
